2008-11-04  David Smith  <dsmith@redhat.com>

	PR 5274.
	* syscall.h: Added s390 task_finder support.

	From Jim Keniston, PR 5274.
	* uprobes/uprobes_s390.h (arch_get_cur_sp): New function.
	(arch_predict_sp_at_ret): Ditto.

2008-11-04  Frank Ch. Eigler  <fche@elastic.org>

	From Masami Hiramatsu <mhiramat@redhat.com>, PR 6028.
	* regs-ia64.c (bspcache): Expand documentation.

2008-10-28  Frank Ch. Eigler  <fche@elastic.org>

	From Jim Keniston:
	* autoconf-oneachcpu-retry.c: Tweak #include's for broader
	compatibility.

2008-10-24  Josh Stone  <joshua.i.stone@intel.com>

	* autoconf-hrtimer-getset-expires.c: New file.

2008-10-17  Wenji Huang  <wenji.huang@oracle.com>

	* task_finder_vma.c (__stp_tf_vma_get_free_entry): Initialize entry.

2008-10-07  Frank Ch. Eigler  <fche@elastic.org>

	PR 4886.
	* sym.c (_stp_module_check): Tweak & simplify build-id checking.
	Weaken consequences of mismatch temporarily due to fedora bug.
	* sym.h: Eliminate special cased values of module->notes_sect.

2008-10-06  Mark Wielaard  <mjw@redhat.com>

	* utrace_compatibility.h: Add workaround for fedora 9 2.6.26 kernels.

2008-10-06  Wenji Huang  <wenji.huang@oracle.com>

        PR 4886
        * sym.h (_stp_module): Add several fields to store build-id.
        * sym.c (_stp_module_check): New function to check build-id.
        * staprun/staprun.c (send_relocation_kernel): Send build-id of runtime
	kernel if there.
        * transport/symbols.c (_stp_do_relocation): Update note section.
	(_stp_section_is_interesting): No filter to .note.gnu.build-id.

2008-10-03  Mark Wielaard  <mjw@redhat.com>

	* procfs.c (_stp_rmdir_proc_module): Remove debug output from warning.

2008-10-03  Mark Wielaard  <mjw@redhat.com>

	* procfs.c (_stp_rmdir_proc_module): Usage count warning
	depends on kernel version.

2008-10-02  Tim Moore  <timoore@redhat.com>

	* addr-map.c (add_bad_addr_entry): Fix bugs in allocating a new
	table and copying old entries into the new table.
